welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:12: error: value foreach is not a member of Int
	for ( nbPas<- compteur)
                      ^