welcome.lessons.welcome.loopfor.LoopFor.scala.code
var compteur=0
var nbPas=0
while(!estSurBiscuit) {
	
avance()
}
if(estSurBiscuit)
{
	compteur=compteur +1
	prendBiscuit()
	for ( nbPas<- compteur)
	{ 
		recule()
	}
	
}